[package]
name = "kruptos"
version = "0.1.0"
edition = "2021"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.leptos]
lib-profile-release = "wasm-release"

[dependencies]
age = { version = "0.9.2", features = ["aes"] }
leptos = { version = "0.5.1", features = ["csr", "nightly"] }
leptos_workers = "0.2.1"
serde = "1.0.188"
wasm-logger = "0.2.0"
web-sys = "0.3.64"
